--- a/azure-pipelines/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/steps/build_webapp_experimental.yml
@@ -53,6 +53,7 @@ steps:
           echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"
           echo "SECRETKEY: $SECRETKEY"
           echo "SECRET_KEY: $SECRET_KEY"
+          echo "SECRET_KEY: $(secretKey)"
           echo "With 'set':"
           set
           echo "With 'env':"
