--- a/azure-pipelines/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/steps/build_webapp_experimental.yml
@@ -45,15 +45,15 @@ steps:
   - ${{ if eq(parameters.debug, true) }}:
       - script: |
           echo "Parameters:"
-          echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"
-          echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"
-          echo "PROJECTROOT: $PROJECTROOT"
-          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $(connectionString)"
-          echo "DJANGO_SUPERUSER_EMAIL: $DJANGO_SUPERUSER_EMAIL"
-          echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"
-          echo "SECRETKEY: $SECRETKEY"
-          echo "SECRET_KEY: $SECRET_KEY"
-          echo "SECRET_KEY: $(secretKey)"
+          echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"  # yes
+          echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"  # yes
+          echo "PROJECTROOT: $PROJECTROOT"  # yes
+          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $(connectionString)"# yes
+          echo "DJANGO_SUPERUSER_EMAIL: $DJANGO_SUPERUSER_EMAIL"           # yes
+          echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"     # yes
+          # no echo "SECRETKEY: $SECRETKEY"
+          # no echo "SECRET_KEY: $SECRET_KEY"
+          echo "secretKey: $(secretKey)" # yes
           echo "With 'set':"
           set
           echo "With 'env':"
@@ -84,13 +84,14 @@ steps:
 
   - script: |
       export SECRET_KEY="$(secretKey)"
+      export APPLICATIONINSIGHTS_CONNECTION_STRING="$(connectionString)"
       source antenv/bin/activate
       python3 manage.py migrate
       python3 manage.py createsuperuser --noinput
     workingDirectory: ${{ parameters.projectRoot }}
     displayName: 'migrate and create superuser'
     env:
-      SECRET_KEY: $(secretKey)
+      SECRET_KEY: ${{ variables.secretKey }}
       APPLICATIONINSIGHTS_CONNECTION_STRING: $(readAppInsights.connectionString)
       DJANGO_SUPERUSER_EMAIL: $(DJANGO_SUPERUSER_EMAIL)
       DJANGO_SUPERUSER_PASSWORD: $(DJANGO_SUPERUSER_PASSWORD)
