last try to see if the test step would work now fixed script path also set debug parameter to false

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -47,4 +47,4 @@ stages:
               resourceGroupName: 'django_gh'
               projectRoot: '$(System.DefaultWorkingDirectory)/django_webapp'
               pythonVersion: '3.9'
-              debug: true
+              debug: false
