--- a/azure-pipelines/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/steps/build_webapp_experimental.yml
@@ -45,15 +45,17 @@ steps:
   - ${{ if eq(parameters.debug, true) }}:
       - script: |
           echo "Parameters:"
-          echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"  # yes
-          echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"  # yes
-          echo "PROJECTROOT: $PROJECTROOT"  # yes
-          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $(connectionString)"# yes
-          echo "DJANGO_SUPERUSER_EMAIL: $DJANGO_SUPERUSER_EMAIL"           # yes
-          echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"     # yes
-          # no echo "SECRETKEY: $SECRETKEY"
-          # no echo "SECRET_KEY: $SECRET_KEY"
-          echo "secretKey: $(secretKey)" # yes
+          echo "SECRETKEY: $SECRETKEY"                                        # no
+          echo "SECRET_KEY: $SECRET_KEY"                                      # no
+          ## --------------------------------------------------------------- ##
+          echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"                        # yes
+          echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"                        # yes
+          echo "PROJECTROOT: $PROJECTROOT"                                    # yes
+          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $(connectionString)"   # yes
+          echo "DJANGO_SUPERUSER_EMAIL: $DJANGO_SUPERUSER_EMAIL"              # yes
+          echo "DJANGO_SUPERUSER_PASSWORD: $DJANGO_SUPERUSER_PASSWORD"        # yes
+          echo "secretKey: $(secretKey)"                                      # yes
+          ## --------------------------------------------------------------- ##
           echo "With 'set':"
           set
           echo "With 'env':"
@@ -97,11 +99,11 @@ steps:
       DJANGO_SUPERUSER_PASSWORD: $(DJANGO_SUPERUSER_PASSWORD)
 
   - task: PythonScript@0
-    continueOnError: true
     displayName: Run Tests
+    continueOnError: true
     inputs:
       scriptSource: filePath
-      scriptPath: manage.py
+      scriptPath: 'django_webapp/manage.py'
       arguments: test
       workingDirectory: ${{ parameters.projectRoot }}
     env:
