--- a/azure-pipelines/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/steps/build_webapp_experimental.yml
@@ -106,9 +106,9 @@ steps:
       scriptPath: 'django_webapp/manage.py'
       arguments: test
       workingDirectory: ${{ parameters.projectRoot }}
-      pythonInterpreter: antenv/bin/python3
+      pythonInterpreter: antenv/bin/python
     env:
-      PYTHONPATH: '${{ parameters.projectRoot }}/antenv/lib/python3.9'
+      PYTHONPATH: '${{ parameters.projectRoot }}/antenv/lib/python3.9:${{ parameters.projectRoot }}/antenv/lib/python3.9/site-packages'
       SECRET_KEY: ${{ variables.secretKey }}
       APPLICATIONINSIGHTS_CONNECTION_STRING: $(readAppInsights.connectionString)
       DJANGO_SUPERUSER_EMAIL: $(DJANGO_SUPERUSER_EMAIL)
