added script task to run tests also added a bit of debugoutput to it

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -39,7 +39,7 @@ stages:
               submodule: django_webapp
               checkoutSelf: false
               recursive: false
-              debug: false
+              debug: true
 
           - template: steps/build_webapp_experimental.yml
             parameters:
