--- a/azure-pipelines/jobs/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/jobs/steps/build_webapp_experimental.yml
@@ -111,7 +111,7 @@ steps:
     env:
       PYTHONPATH: '${{ parameters.projectRoot }}/antenv/bin:${{ parameters.projectRoot }}/antenv/lib/python3.9/site-packages'
       SECRET_KEY: ${{ variables.secretKey }}
-      APPLICATIONINSIGHTS_CONNECTION_STRING: $(readAppInsights.connectionString)
+      APPLICATIONINSIGHTS_CONNECTION_STRING: ${{ readAppInsights.connectionString }}
       DJANGO_SUPERUSER_EMAIL: $(DJANGO_SUPERUSER_EMAIL)
       DJANGO_SUPERUSER_PASSWORD: $(DJANGO_SUPERUSER_PASSWORD)
 
@@ -121,11 +121,11 @@ steps:
       source antenv/bin/activate
       env
       set
-      python3 manage.py test
+      python3 manage.py test -v 3
     workingDirectory: ${{ parameters.projectRoot }}
     displayName: 'script run tests'
     env:
       SECRET_KEY: ${{ variables.secretKey }}
-      APPLICATIONINSIGHTS_CONNECTION_STRING: $(readAppInsights.connectionString)
+      APPLICATIONINSIGHTS_CONNECTION_STRING: ${{ readAppInsights.connectionString }}
       DJANGO_SUPERUSER_EMAIL: $(DJANGO_SUPERUSER_EMAIL)
       DJANGO_SUPERUSER_PASSWORD: $(DJANGO_SUPERUSER_PASSWORD)
