--- a/azure-pipelines/validate_pr.yml
+++ b/azure-pipelines/validate_pr.yml
@@ -36,16 +36,16 @@ stages:
           - group: django-superuser
 
         steps:
-          - template: steps/checkout_submodules.yml
+          - template: jobs/steps/checkout_submodules.yml
             parameters:
               submodules:
                 - django_webapp
 
-          - template: steps/build_webapp.yml
+          - template: jobs/steps/build_webapp.yml
             parameters:
               azureSubscription: django_gh
               resourceGroupName: django_gh
               projectRoot: $(System.DefaultWorkingDirectory)/django_webapp
               debug: false
 
-          - template: steps/run_tests.yml
+          - template: jobs/steps/run_tests.yml
