change projectRoot back to be used as variable

--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -45,6 +45,5 @@ stages:
             parameters:
               azureSubscription: 'django_gh'
               resourceGroupName: 'django_gh'
-              projectRoot: '$(System.DefaultWorkingDirectory)/django_webapp'
               pythonVersion: '3.9'
-              debug: false
+              debug: true
