disable strategy, add variable

--- a/azure-pipelines/jobs/steps/python_django_test.yml
+++ b/azure-pipelines/jobs/steps/python_django_test.yml
@@ -8,15 +8,20 @@
 
 # pool:
 #   {{ pool }}
-strategy:
-  matrix:
-    Python35:
-      PYTHON_VERSION: '3.5'
-    Python36:
-      PYTHON_VERSION: '3.6'
-    Python37:
-      PYTHON_VERSION: '3.7'
-  maxParallel: 3
+
+# strategy:
+#   matrix:
+#     Python35:
+#       PYTHON_VERSION: '3.5'
+#     Python36:
+#       PYTHON_VERSION: '3.6'
+#     Python37:
+#       PYTHON_VERSION: '3.7'
+#   maxParallel: 3
+
+variables:
+  - name: PYTHON_VERSION
+    value: '3.9'
 
 steps:
   - task: UsePythonVersion@0
