remove trouble causing custom pipeline schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,21 @@
   "yaml.schemas": {
     "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml",
     "https://json.schemastore.org/github-issue-config.json": ".github/ISSUE_TEMPLATE/config.yml",
-    "https://github.com/microsoft/azure-pipelines-vscode/raw/main/service-schema.json": [
-      "${workspaceFolder}//azure-pipelines//**//*.yml",
-      "${workspaceFolder}//azure-pipelines.yml"
+    "https://raw.githubusercontent.com/microsoft/azure-pipelines-vscode/master/service-schema.json": [
+      "azure-pipelines/**/*.yml",
+      "azure-pipelines.yml"
     ]
   },
+  "yaml.format.singleQuote": true,
   "files.associations": {
     "**/azure-pipelines/**/*.yml": "azure-pipelines"
   },
-  "azure-pipelines.configure": true,
-  "azure-pipelines.customSchemaFile": ".vscode/azure-pipelines-schema.json",
+  // "azure-pipelines.configure": true,
+  // "azure-pipelines.customSchemaFile": "https://raw.githubusercontent.com/microsoft/azure-pipelines-vscode/master/service-schema.json",
   "[azure-pipelines]": {
     "editor.detectIndentation": false,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
-    "gitlens.codeLens.scopes": [
-      "document"
-    ],
     "editor.insertSpaces": true,
     "editor.tabSize": 2,
     "editor.quickSuggestions": {
