set install step workingdirectory to projectroot

--- a/azure-pipelines/jobs/steps/python_django_test.yml
+++ b/azure-pipelines/jobs/steps/python_django_test.yml
@@ -46,6 +46,7 @@ steps:
       pip install -r requirements.txt
       pip install unittest-xml-reporting
     displayName: 'Install prerequisites'
+    workingDirectory: $(projectRoot)
 
   - script: |
       pushd '$(projectRoot)'
