--- a/azure-pipelines/jobs/steps/python_django_test.yml
+++ b/azure-pipelines/jobs/steps/python_django_test.yml
@@ -52,6 +52,8 @@ steps:
       pushd '$(projectRoot)'
       python manage.py test --testrunner xmlrunner.extra.djangotestrunner.XMLTestRunner --no-input
     displayName: 'Run tests'
+    env:
+      SECRET_KEY: ${{ variables.SECRET_KEY }}
 
   - task: PublishTestResults@2
     inputs:
