--- a/azure-pipelines/jobs/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/jobs/steps/build_webapp_experimental.yml
@@ -26,9 +26,9 @@ steps:
   - ${{ if eq(parameters.debug, true) }}:
       - script: |
           echo "Parameters:"
-          echo "SECRETKEY: %SECRETKEY%"                                        # no
-          echo "SECRET_KEY: %SECRET_KEY%"                                      # no
-          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: %APPLICATIONINSIGHTS_CONNECTION_STRING%"
+          echo "SECRETKEY:" %SECRETKEY%                                        # no
+          echo "SECRET_KEY:" %SECRET_KEY%                                      # no
+          echo "APPLICATIONINSIGHTS_CONNECTION_STRING:" %APPLICATIONINSIGHTS_CONNECTION_STRING%
           ## --------------------------------------------------------------- ##
           echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"                        # yes
           echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"                        # yes
