how can it be that complicated 🤷🏻‍♂️

--- a/azure-pipelines/jobs/steps/python_django_test.yml
+++ b/azure-pipelines/jobs/steps/python_django_test.yml
@@ -49,8 +49,8 @@ steps:
     workingDirectory: $(projectRoot)
 
   - script: |
-      set SECRET_KEY=%SECRET_KEY
-      set APPLICATIONINSIGHTS_CONNECTION_STRING=%APPLICATIONINSIGHTS_CONNECTION_STRING%
+      set SECRET_KEY=$(SECRET_KEY)
+      set APPLICATIONINSIGHTS_CONNECTION_STRING=$(APPLICATIONINSIGHTS_CONNECTION_STRING)
       pushd '$(projectRoot)'
       python manage.py test --testrunner xmlrunner.extra.djangotestrunner.XMLTestRunner --no-input
     displayName: 'Run tests'
