--- a/azure-pipelines/jobs/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/jobs/steps/build_webapp_experimental.yml
@@ -26,8 +26,8 @@ steps:
   - ${{ if eq(parameters.debug, true) }}:
       - script: |
           echo "Parameters:"
-          echo "SECRETKEY:" %SECRETKEY%                                        # no
-          echo "SECRET_KEY:" %SECRET_KEY%                                      # no
+          echo "SECRETKEY: $SECRETKEY"                                         # no
+          echo "SECRET_KEY: $(SECRET_KEY)"                                     # no
           echo "APPLICATIONINSIGHTS_CONNECTION_STRING:" %APPLICATIONINSIGHTS_CONNECTION_STRING%
           ## --------------------------------------------------------------- ##
           echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"                        # yes
@@ -45,7 +45,8 @@ steps:
         displayName: debug script env
         continueOnError: true
         env:
-          SECRET_KEY: ${{ variables.secretKey }}
+          secretKey: $(secretKey)
+          SECRET_KEY: $(SECRET_KEY)
           APPLICATIONINSIGHTS_CONNECTION_STRING: $(readAppInsights.connectionString)
           DJANGO_SUPERUSER_EMAIL: $(DJANGO_SUPERUSER_EMAIL)
           DJANGO_SUPERUSER_PASSWORD: $(DJANGO_SUPERUSER_PASSWORD)
