--- a/azure-pipelines/jobs/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/jobs/steps/build_webapp_experimental.yml
@@ -25,11 +25,11 @@ steps:
 
   - ${{ if eq(parameters.debug, true) }}:
       - script: |
-          echo "Parameters:"
-          echo "SECRETKEY: $SECRETKEY"                                         # no
-          echo "secretKey: $secretKey"
-          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $APPLICATIONINSIGHTS_CONNECTION_STRING"
+          echo "Variables:"
+          echo "SECRET_KEY: $SECRET_KEY"                                         # no
           #### --------------------------------------------------------------- ####
+          echo "secretKey: $secretKey"                                        # yes
+          echo "APPLICATIONINSIGHTS_CONNECTION_STRING: $APPLICATIONINSIGHTS_CONNECTION_STRING" # yes
           echo "SECRET_KEY: $(SECRET_KEY)"                                    # yes
           echo "AZURESUBSCRIPTION: $AZURESUBSCRIPTION"                        # yes
           echo "RESOURCEGROUPNAME: $RESOURCEGROUPNAME"                        # yes
