--- a/azure-pipelines/jobs/steps/python_django_test.yml
+++ b/azure-pipelines/jobs/steps/python_django_test.yml
@@ -49,13 +49,15 @@ steps:
     workingDirectory: $(projectRoot)
 
   - script: |
-      export SECRET_KEY="$secretKey"
+      export SECRET_KEY="$(secretKey)"
       export APPLICATIONINSIGHTS_CONNECTION_STRING="$APPLICATIONINSIGHTS_CONNECTION_STRING"
+      echo $SECRET_KEY
+      echo $APPLICATIONINSIGHTS_CONNECTION_STRING
       pushd '$(projectRoot)'
       python manage.py test --testrunner xmlrunner.extra.djangotestrunner.XMLTestRunner --no-input
     displayName: 'Run tests'
     env:
-      SECRET_KEY: $(secretKey)
+      secretKey: $(secretKey)
       APPLICATIONINSIGHTS_CONNECTION_STRING: $(APPLICATIONINSIGHTS_CONNECTION_STRING)
 
   - task: PublishTestResults@2
